--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ gunicorn = "^20.1.0"
 psycopg2 = "^2.9.3"
 Flask-Migrate = "^3.1.0"
 importlib-metadata = "^4.12.0"
+Flask-Cors = "^3.0.10"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
